<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.ul.miage</groupId>
    <artifactId>projet_gi</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <description>Projet génie logiciel</description>

    <properties>
        <!-- Le code source en UTF8 -->
        <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
        <!-- OU stocker la distribution binaire -->
        <project.bindist.dir>${project.basedir}/bindist</project.bindist.dir>
        <!-- Nom de la classe principale -->
        <project.main.classname>${project.groupId}.${project.artifactId}.Main</project.main.classname>
        <!-- Nom du script à executer-->
        <project.bin.appname>run</project.bin.appname>
        <assertj.version>3.22.0</assertj.version>
        <junit.version>5.8.2</junit.version>
        <mockito.version>4.4.0</mockito.version>
        <jacoco.version>0.8.7</jacoco.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>18</release>
                </configuration>
            </plugin>
            <plugin>
                <!-- create scripts for apps -->
                <!-- mvn package | appassembler : assemble -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.10</version>
                <configuration>
                    <assembleDirectory>${project.bindist.dir}</assembleDirectory>

                    <programs>
                        <program>
                            <mainClass>${project.main.classname}</mainClass>
                            <id>${project.bin.appname}</id>
                        </program>
                    </programs>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>win</id>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                        <configuration>
                            <assembleDirectory>${project.bindist.dir}</assembleDirectory>
                            <repositoryLayout>flat</repositoryLayout>
                            <extraJvmArguments>
                                --module-path %JAVAFX_HOME%\lib --add-modules javafx.controls,javafx.fxml
                            </extraJvmArguments>
                            <programs>
                                <program>
                                    <platforms>
                                        <platform>windows</platform>
                                    </platforms>
                                    <mainClass>${project.main.classname}</mainClass>
                                    <id>${project.bin.appname}</id>
                                </program>
                            </programs>
                        </configuration>
                    </execution>

                    <execution>
                        <id>unix</id>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                        <configuration>
                            <assembleDirectory>${project.bindist.dir}</assembleDirectory>
                            <repositoryLayout>flat</repositoryLayout>
                            <extraJvmArguments>
                                --module-path $JAVAFX_HOME/lib --add-modules javafx.controls,javafx.fxml
                            </extraJvmArguments>
                            <programs>
                                <program>
                                    <platforms>
                                        <platform>unix</platform>
                                    </platforms>
                                    <mainClass>${project.main.classname}</mainClass>
                                    <id>${project.bin.appname}</id>
                                </program>
                            </programs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <mainClass>${project.main.classname}</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.29</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>appassembler-maven-plugin</artifactId>
            <version>1.10</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
        <dependency>
            <!-- Mocking en Java -->
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
